--- a/Makefile.in
+++ b/Makefile.in
@@ -210,7 +210,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 AUTOMAKE_OPTIONS = 1.4 foreign
 ACLOCAL_AMFLAGS = -I auxdir
-LDADD = -lm -L. -lspro @sphere_lib@
+LDADD = -L. -lspro -lm @sphere_lib@
 INCLUDES = @sphere_include@
 include_HEADERS = spro.h sptables.h
 lib_LIBRARIES = libspro.a
